// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MarkdownModal renders correctly when it's active 1`] = `
<div
  className="modal is-active"
>
  <div
    className="modal-background"
  />
  <div
    className="modal-card"
  >
    <header
      className="modal-card-head"
    >
      <p
        className="modal-card-title"
      >
        Preview
      </p>
      <button
        aria-label="close"
        className="delete"
        onClick={[Function]}
      />
    </header>
    <section
      className="modal-card-body"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p>Test active text.</p>
",
        }
      }
    />
    <footer
      className="modal-card-foot"
    >
      <button
        className="button"
        onClick={[Function]}
      >
        Close
      </button>
    </footer>
  </div>
</div>
`;

exports[`MarkdownModal renders correctly when it's not active 1`] = `
<div
  className="modal is-active"
>
  <div
    className="modal-background"
  />
  <div
    className="modal-card"
  >
    <header
      className="modal-card-head"
    >
      <p
        className="modal-card-title"
      >
        Preview
      </p>
      <button
        aria-label="close"
        className="delete"
        onClick={[Function]}
      />
    </header>
    <section
      className="modal-card-body"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p>Test inactive text.</p>
",
        }
      }
    />
    <footer
      className="modal-card-foot"
    >
      <button
        className="button"
        onClick={[Function]}
      >
        Close
      </button>
    </footer>
  </div>
</div>
`;
